--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,14 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      - ./:/app  # Changed from . to ./
+      - .:/app
       - /app/node_modules
     environment:
       - NODE_ENV=development
-      - CHOKIDAR_USEPOLLING=true  # Add this for better file watching
-      - WATCHPACK_POLLING=true    # Add this for better file watching
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
+      - VITE_HOST=0.0.0.0
+      - VITE_PORT=5173
+    stdin_open: true
+    tty: true
     command: npm run dev
