--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.4.3",
+    "lucide-react": "^0.298.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.298.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
@@ -24,5 +25,8 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
